@@ -1702,6 +1702,13 @@ Example  : chant "summon animal"\n\r\
 This chant will cause a random animal to wander to and befriend the druid as per the \
 "charm animal" chant.
 
+CHANT_SUMMONANIMALS=CHANT_SUMMON_ANIMALS
+CHANT_SUMMON_ANIMALS=<ABILITY>\
+Usage    : CHANT "SUMMON ANIMALS\n\r\
+Example  : chant "summon animals"\n\r\
+This chant will a group of a random animal to wander to and befriend the druid as per the \
+"charm animal" chant.
+
 CHANT_SUMMONCHUM=CHANT_SUMMON_CHUM
 CHANT_SUMMON_CHUM=<ABILITY>\
 Usage    : CHANT "SUMMON CHUM"\n\r\
